// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /api/analyze — gold snapshots damage 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "damage",
      ],
      "form": "damage",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "vowelPath": "A-A-E",
    },
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "damage",
  "word": "damage",
}
`;

exports[`POST /api/analyze — gold snapshots missing word -> 400 1`] = `
{
  "error": "Missing "word". Expected: { word: string }",
}
`;

exports[`POST /api/analyze — gold snapshots study 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "study",
      ],
      "form": "study",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "vowelPath": "U-Y",
    },
  ],
  "engineVersion": "v1.0.0",
  "normalizedWord": "study",
  "word": "study",
}
`;
